--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
 					<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
 				</div>
 			</div>
-			<div class="card-item">
+			<div class="card-item card-item-last">
 				<div class="card-item-photo">
 					<img src="./img/Rectangle 27.png" alt="">
 				</div>
