--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
 	</section>
 
 	<section class="download">
-		<div class="container">
+		<div class="container container-download">
 			<div class="download-title">
 				<p>Are You Ready to Start? Download Now For Free!</p>
 			</div>
@@ -261,7 +261,7 @@
 		</div>
 	</section>
 	<footer class="footer">
-		<div class="container">
+		<div class="container container-footer">
 			<p class="footer-text">Copyright © 2015 ActiveBox. All Rights Reserved
 				Made with <a href="#">by Kamal Chaneman</a> </p>
 		</div>
