--- a/src/index.html
+++ b/src/index.html
@@ -96,12 +96,67 @@
 		</div>
 	</section>
 	<section class="gallery">
-		<div class="gallery-items">
+		
 			<div class="gallery-item">
-				<img src="./img/gallery/1.jpg" alt="">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/1.jpg" alt=""></div>
+					<div class="gallery-item_list">
+						<div class="gallery-item_name"><p>Project Name</p></div>
+						<div class="gallery-item_text"><p>User Interface Design</p></div>
+					</div>
+				</a>
+			</div>
+			<div class="gallery-item">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/2.jpg" alt=""></div>
+					<div class="gallery-item_name"><p>Project Name</p></div>
+					<div class="gallery-item_text"><p>User Interface Design</p></div>
+				</a>
+			</div>
+			<div class="gallery-item">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/3.jpg" alt=""></div>
+					<div class="gallery-item_name"><p>Project Name</p></div>
+					<div class="gallery-item_text"><p>User Interface Design</p></div>
+				</a>
+			</div>
+			<div class="gallery-item">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/4.jpg" alt=""></div>
+					<div class="gallery-item_name"><p>Project Name</p></div>
+					<div class="gallery-item_text"><p>User Interface Design</p></div>
+				</a>
+			</div>
+			<div class="gallery-item">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/5.jpg" alt=""></div>
+					<div class="gallery-item_name"><p>Project Name</p></div>
+					<div class="gallery-item_text"><p>User Interface Design</p></div>
+				</a>
+			</div>
+			<div class="gallery-item">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/6.jpg" alt=""></div>
+					<div class="gallery-item_name"><p>Project Name</p></div>
+					<div class="gallery-item_text"><p>User Interface Design</p></div>
+				</a>
+			</div>
+			<div class="gallery-item">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/7.jpg" alt=""></div>
+					<div class="gallery-item_name"><p>Project Name</p></div>
+					<div class="gallery-item_text"><p>User Interface Design</p></div>
+				</a>
+			</div>
+			<div class="gallery-item">
+				<a href="#">
+					<div class="gallery-item_img"><img src="./img/gallery/8.jpg" alt=""></div>
+					<div class="gallery-item_name"><p>Project Name</p></div>
+					<div class="gallery-item_text"><p>User Interface Design</p></div>
+				</a>
 			</div>
 
-		</div>
+		
 	</section>
 
 	<section class="card">
